Fix text alignment

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -54,6 +54,7 @@
         .intro {
             width: 100%;
             align-items: center;
+            text-align: center;
             h1 {
                 font-size: 3rem;
                 margin-left: -0.1rem;
